# RAG-OCR-Pipeline

./: .env.example  .gitignore  README.md  out.txt  pyproject.toml  requirements.txt
.daily-logs/: last_update.json
.github/workflows/: daily_commit.yml
src/api/: server.py
src/core/: config.py
src/pipelines/: ask.py  ingestion.py
src/services/: elastic.py  embedding.py  ocr.py  retrieval.py
src/utils/: image_ops.py  language.py  nlp_processing.py
