[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turinton-rag"
version = "0.1.0"
description = "RAG pipeline with OCR ingestion and LangChain 0.3"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Turinton AI", email = "support@turinton.ai"}]
keywords = ["rag", "langchain", "elastic", "ocr", "ollama"]

[project.optional-dependencies]
cli = ["typer>=0.9"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.23", "python-multipart>=0.0.6"]

[tool.setuptools.packages.find]
where = ["src"]
